<resources>
    <string name="app_name">ui-test</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_drawer_layout">DrawerLayoutActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_bottm_navigate">BottmNavigateActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_share">Share</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="pref_sync">Sync</string>
    <string name="pref_sync_summ">Sync summary</string>
    <string name="pref_syncConnectionType">Sync Detail</string>
    <string name="pref_syncConnectionTypes_default">Default</string>
    <string name="inline_preferences">Inline Preference</string>
    <string name="title_checkbox_preference">Checkbox Pref</string>
    <string name="summary_checkbox_preference">checkbox</string>
    <string name="dialog_based_preferences">Dialog Pref</string>
    <string name="title_edittext_preference">Edit Pref</string>
    <string name="summary_edittext_preference">edit</string>
    <string name="dialog_title_edittext_preference">Dialog Edit Pref</string>
    <string name="title_list_preference">List Pref</string>
    <string name="summary_list_preference">list</string>
    <string name="dialog_title_list_preference">Dialog List Pref</string>
    <string name="launch_preferences">Launch Pref</string>
    <string name="title_fragment_preference">Fragment Pref</string>
    <string name="summary_fragment_preference">fragment</string>
    <string name="title_intent_preference">Intent Pref</string>
    <string name="summary_intent_preference">intent</string>
    <string name="preference_attributes">attributes</string>
    <string name="title_parent_preference">Parent Pref</string>
    <string name="summary_parent_preference">parent</string>
    <string name="title_child_preference">Child Pref</string>
    <string name="summary_child_preference">child</string>

    <string-array name="items">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
