<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/inline_preferences">

        <CheckBoxPreference
            android:key="checkbox_preference"
            android:title="@string/title_checkbox_preference"
            android:summary="@string/summary_checkbox_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/dialog_based_preferences">

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/title_edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:dialogTitle="@string/dialog_title_edittext_preference" />

        <ListPreference
            android:key="list_preference"
            android:title="@string/title_list_preference"
            android:summary="@string/summary_list_preference"
            android:entries="@array/items"
            android:entryValues="@array/items"
            android:dialogTitle="@string/dialog_title_list_preference" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/launch_preferences">

        <!-- This PreferenceScreen tag sends the user to a new fragment of
             preferences.  If running in a large screen, they can be embedded
             inside of the overall preferences UI. -->
        <PreferenceScreen
            android:fragment="com.tolka.ui_test.SettingActivity$Pref2Fragment"
            android:title="@string/title_fragment_preference"
            android:summary="@string/summary_fragment_preference">
        </PreferenceScreen>
        <!--<PreferenceScreen-->
            <!--android:title="@string/title_fragment_preference"-->
            <!--android:summary="@string/summary_fragment_preference">-->
            <!--<CheckBoxPreference-->
                <!--android:key="pref_sync"-->
                <!--android:title="@string/pref_sync"-->
                <!--android:summary="@string/pref_sync_summ"-->
                <!--android:defaultValue="true" />-->
            <!--<ListPreference-->
                <!--android:dependency="pref_sync"-->
                <!--android:key="pref_syncConnectionType"-->
                <!--android:title="@string/pref_syncConnectionType"-->
                <!--android:dialogTitle="@string/pref_syncConnectionType"-->
                <!--android:entries="@array/items"-->
                <!--android:entryValues="@array/items"-->
                <!--android:defaultValue="@string/pref_syncConnectionTypes_default" />-->
        <!--</PreferenceScreen>-->

        <!-- This PreferenceScreen tag sends the user to a completely different
             activity, switching out of the current preferences UI. -->
        <PreferenceScreen
            android:title="@string/title_intent_preference"
            android:summary="@string/summary_intent_preference">

            <intent android:action="android.intent.action.VIEW"
                    android:data="http://www.android.com" />

        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preference_attributes">

        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:title="@string/title_parent_preference"
            android:summary="@string/summary_parent_preference" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:key="child_checkbox_preference"
            android:dependency="parent_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:title="@string/title_child_preference"
            android:summary="@string/summary_child_preference" />

    </PreferenceCategory>

</PreferenceScreen>